2004-05-14  Lassi A. Tuura  <lat@iki.fi>

	* IgProf.cc: Properly check if the program is multi-threaded and
	remember that in all decisions.  Mark program non-threaded when we
	are quitting to avoid invoking into pthreads in destructors
	(e.g. from late-delivered profile signal).  Try to work around
	bugs in linux recursive mutex handling within signals.
	* IgProf.h (IgProfLock): Update.

	* IgProfPerf.cc: Synchronise profiling signal thread startup.
	Correctly check whether profiling module is enabled.  Make sure
	profiling signal is not sent before we are ready for it in
	captured threads (may still not work correctly -- sometimes COBRA
	seems to catch SIGSEGV the minute we capture the thread?).

	* IgProfMem.cc (add): Live counter is cumulative, not maxed.

	* IgProf.cc, IgProfMem.cc, IgProfFileDesc.cc: Trap all functions
	twice, once for main program and another time for executable, as
	we used to do for "exit()".  Required for some binaries.  To be
	cleaned up so a single macro does both variations.

	* IgProfFileDesc.cc (initialize): Fix option handling.

	* IgProfFileDesc.cc: Implement.

2004-05-13  Lassi A. Tuura  <lat@iki.fi>

	* igprof-analyse: Normalise counters early.

	* IgProfMem.cc, IgProfPerf.cc, IgProfFileDesc.cc: Fix option
	parsing.

	* IgProf.cc (igkill): Lock only once we know we will handle this
	signal to avoid dead-locking problems (e.g. with SIGPROF).

2004-05-13  Lassi A. Tuura  <lat@iki.fi>

	* IgProf.h: Turn off verbosity for proper usage.

	* IgProf.h, IgProf.cc (IGPROF_ASSERT, IGPROF_TRACE, panic): New
	profiler tool debugging utilities.

	* IgProfFileDesc.cc, IgProfPerf.cc: Use them.

	* IgProfMem.cc: Use them.  Allow remove() to be called on
	objects whose creation we didn't track.

2004-05-12  Lassi A. Tuura  <lat@iki.fi>

	* igprof-analyse: Fix dump reading bugs.  Take into account key
	ordering options for output.

	* igprof-analyse: First complete version (except recursion).
